# tlspuffin

./: .clang-format  .editorconfig  .gdbinit  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  1  Cargo.toml  Finding11.md  LICENSE  QUICKSTART.md  README.md  THIRD_PARTY  TODO.rs  build_evaluate.sh  client_log_config.yml  compareTime.sh  coverage.sh  evaluate.sh  evaluate_parallel.sh  finding11.gdb  finding11_CVE.md  finding8-master.gdb  finding8.gdb  justfile  rust-toolchain.toml  rustfmt.toml  search-index.js  settings.html  shell.nix  source-files.js  test_mk_vendor.sh  test_tlspuffin.sh
.cargo/: config.toml
cbindings/: Cargo.toml  build.rs
cbindings/src/: lib.rs  put.h
crates/boringssl-sys/: Cargo.toml  build.rs
crates/boringssl-sys/src/: lib.rs
crates/libressl-src/: Cargo.toml  README.md
crates/libressl-src/src/: arc4random_prng.c  arc4random_prng.h  lib.rs
crates/openssl-src-111/: Cargo.toml
crates/wolfssl-sys/: Cargo.toml  build.rs  wrapper.h
opcuapuffin/: Cargo.toml
opcuapuffin/assets/: SimulationServer@PenDuick_2048.der  SimulationServer@PenDuick_2048.pem  UAExpert.der  UAExpert_key.pem
opcuapuffin/src/: claims.rs  lib.rs  main.rs  messages.rs  protocol.rs  put_registry.rs  static_certs.rs  tests.rs  types.rs
puffin/: Cargo.toml  build.rs
puffin-build/: Cargo.toml  build.rs
puffin-build/builder/: CMakeLists.txt
puffin-build/cmake/: CMakeLists.txt
puffin-build/src/: cmake.rs  error.rs  lib.rs  puffin.rs  vendor.rs
puffin-macros/: Cargo.toml
puffin-macros/src/: lib.rs
puffin-macros/tests/: test.rs
puffin/src/: agent.rs  claims.rs  cli.rs  codec.rs  differential.rs  error.rs  execution.rs  experiment.rs  graphviz.rs  harness.c  harness.rs  io.rs  lib.rs  log.rs  main.rs  protocol.rs  put.rs  put_registry.rs  stream.rs  test_utils.rs  trace.rs  trace_helper.rs  variable_data.rs
puts/: CMakeLists.txt  Cargo.toml  build.rs
puts/cmake/: BundleStaticLibs.cmake  CheckCCompilerCanPrintDeps.c  CheckCCompilerCanPrintDeps.cmake  CheckOpenSSLHasClaims.c  CheckOpenSSLHasClaims.cmake  FindClaimsLibrary.cmake  FindOpenSSLFromDir.cmake  ParsePutArgs.cmake
puts/harness/: CMakeLists.txt  Cargo.toml  build.rs
puts/openssl/: CMakeLists.txt  Cargo.toml
puts/src/: lib.rs  put.c  put_openssl.c
sshpuffin/: Cargo.toml  build.rs
sshpuffin/src/: claim.rs  main.rs  protocol.rs  put_registry.rs  query.rs  violation.rs
tlspuffin/: Cargo.toml  all.html  build.rs  index.html  macro.define_signature!.html  macro.define_signature.html  macro.mutator!.html  macro.mutator.html  macro.nyi_fn!.html  macro.nyi_fn.html  macro.term.html  macro.term_arg!.html  macro.term_arg.html  sidebar-items.js
tlspuffin-claims/: Cargo.toml  build.rs  claim-interface.h
tlspuffin-claims/src/: ffi.rs  lib.rs  register.rs  violation.rs
tlspuffin-macros/: Cargo.toml
tlspuffin-macros/src/: lib.rs
tlspuffin-macros/tests/: test.rs
tlspuffin/agent/: enum.TLSVersion.html  index.html  sidebar-items.js  struct.Agent.html  struct.AgentDescriptor.html  struct.AgentName.html
tlspuffin/assets/: alice-key.der  alice-key.pem  alice.der  alice.pem  bob-key.der  bob-key.pem  bob.der  bob.pem  eve-key.der  eve-key.pem  eve-signature  eve.der  eve.pem  generate.sh  random-ec-key.pem  random-ec-key.pkcs8.der  random-ec.der  random-ec.pem
tlspuffin/benches/: benchmark.rs
tlspuffin/concretize/: enum.PUTType.html  fn.put_make_deterministic.html  fn.put_version.html  index.html  sidebar-items.js  struct.Config.html  struct.OpenSSL.html  struct.WolfSSL.html  struct.WolfSSLState.html  trait.PUT.html  type.Bts.html
tlspuffin/error/: enum.Error.html  index.html
tlspuffin/fuzzer/: fn.start.html  index.html  sidebar-items.js
tlspuffin/graphviz/: fn.write_graphviz.html  index.html  sidebar-items.js
tlspuffin/io/: index.html  sidebar-items.js  struct.MemoryStream.html  struct.MessageResult.html  struct.OpenSSLStream.html  trait.Stream.html  type.Channel.html
tlspuffin/openssl_binding/: fn.RAND_seed.html  fn.create_openssl_client.html  fn.create_openssl_server.html  fn.do_handshake.html  fn.log_io_error.html  fn.log_ssl_error.html  fn.make_deterministic.html  fn.make_openssl_deterministic.html  fn.static_rsa_cert.html  index.html  sidebar-items.js
tlspuffin/src/: agent.rs  claims.rs  concretize.rs  cput.rs  debug.rs  error.rs  experiment.rs  extraction.rs  graphviz.rs  io.rs  lib.rs  log.rs  main.rs  protocol.rs  put.rs  put_registry.rs  query.rs  registry.rs  static_certs.rs  test_utils.rs  tests.rs  trace.rs  variable_data.rs  wolfssl_bio.rs
tlspuffin/term/: enum.Term.html  index.html  sidebar-items.js  trait.Subterms.html
tlspuffin/tests/: determinism.rs  harness.rs  index.html  mutations.rs  sidebar-items.js  static.put_type.html  term_zoo.rs  terms.rs  vulnerabilities.rs
tlspuffin/tls/: index.html  sidebar-items.js  static.SIGNATURE.html
tlspuffin/trace/: enum.Action.html  enum.TlsMessageType.html  index.html  struct.AgentClaimer.html  struct.InputAction.html  struct.Knowledge.html  struct.OutputAction.html  struct.Query.html  struct.Step.html  struct.Trace.html  struct.TraceContext.html  struct.VecClaimer.html  trait.QueryMatcher.html
tlspuffin/variable_data/: fn.extract_knowledge.html  index.html  sidebar-items.js  trait.VariableData.html
tlspuffin/wolfssl_binding/: fn.create_client.html  fn.create_server.html  fn.do_handshake.html  fn.init.html  index.html  sidebar-items.js  struct.Ssl.html  struct.SslStream.html
tlspuffin/wolfssl_bio/: constant.BIO_CTRL_DGRAM_QUERY_MTU.html  constant.BIO_CTRL_EOF.html  constant.BIO_CTRL_FLUSH.html  constant.BIO_CTRL_INFO.html  constant.BIO_C_SET_BUF_MEM_EOF_RETURN.html  constant.BIO_FLAGS_IO_SPECIAL.html  constant.BIO_FLAGS_READ.html  constant.BIO_FLAGS_RWS.html  constant.BIO_FLAGS_SHOULD_RETRY.html  constant.BIO_FLAGS_WRITE.html  constant.BIO_TYPE_NONE.html  fn.BIO_clear_retry_flags.html  fn.BIO_set_retry_read.html  fn.BIO_set_retry_write.html  fn.bio_new.html  fn.get_mut.html  fn.take_error.html  fn.take_panic.html  index.html  sidebar-items.js  struct.BioMethod.html  struct.StreamState.html  type.BIO.html
(+24433 files in other folders)
