[workspace]

resolver = "2"

members = [
    "puffin",
    "tlspuffin",
    "sshpuffin",
    "tlspuffin-claims",
    "crates/libressl-src",
    "crates/wolfssl",
    "crates/wolfssl-sys",
    "crates/wolfssl-src",
    "crates/libssh-sys",
]

exclude = ["crates/openssl-src-111"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Maximilian Ammann <max@maxammann.org>", "Lucca Hirschi <lucca.hirschi@inria.fr>", "Michael Mera <dev@michaelmera.com>"]
repository = "https://github.com/tlspuffin/tlspuffin"
homepage = "https://github.com/tlspuffin/tlspuffin"
license = "MIT"
readme = "README.md"
keywords = ["security",  "fuzzing", "testing"]
categories = ["development-tools::testing", "network-programming", "simulation"]
description = "A Dolev-Yao-model-guided fuzzer for TLS"

[patch.crates-io]
wolfssl-sys = { path = "crates/wolfssl-sys" }
wolfssl-src = { path = "crates/wolfssl-src" }
openssl-src = { path = "crates/openssl-src-111" }
libressl-src = { path = "crates/libressl-src" }
security-claims = { path = "tlspuffin-claims" }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
debug = true

[profile.dev]
panic = "abort"
