[workspace]

resolver = "2"

members = [
    "puffin",
    "tlspuffin",
    "sshpuffin",
    "tlspuffin-claims",
]

exclude = [
    "crates/openssl-src-111",
    "crates/libressl-src",
    "crates/wolfssl",
    "crates/wolfssl-sys",
    "crates/wolfssl-src",
    "crates/libssh-sys",
    "crates/boringssl-src",
    "crates/boringssl-sys",
    "crates/boring"
]


[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Maximilian Ammann <max@maxammann.org>", "Lucca Hirschi <lucca.hirschi@inria.fr>", "Michael Mera <dev@michaelmera.com>", "Tom Gouville <tom@tomgouville.fr>"]
repository = "https://github.com/tlspuffin/tlspuffin"
homepage = "https://github.com/tlspuffin/tlspuffin"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["security",  "fuzzing", "testing"]
categories = ["development-tools::testing", "network-programming", "simulation"]
description = "A Dolev-Yao-model-guided fuzzer for TLS"

[patch.crates-io]
wolfssl-sys = { path = "crates/wolfssl-sys" }
wolfssl-src = { path = "crates/wolfssl-src" }
openssl-src = { path = "crates/openssl-src-111" }
libressl-src = { path = "crates/libressl-src" }
libssh-sys = { path = "crates/libssh-sys" }
security-claims = { path = "tlspuffin-claims" }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
debug = true

[profile.dev]
panic = "abort"
# TODO: Without LTO, the fuzzer hangs in debug releases with BoringSSL
# To reproduce the bug, simply disable lto and run 
# `cargo run --bin tlspuffin --features boringssl202403`
lto = true
