[workspace]

resolver = "2"

members = [
    "puffin",
    "tlspuffin",
    "sshpuffin",
    "tlspuffin-claims",
    "puffin-build",
    "puffin-macros",
    "extractable-macro",
]

exclude = [
    "crates/openssl-src-111",
    "crates/libressl-src",
    "crates/wolfssl",
    "crates/wolfssl-sys",
    "crates/wolfssl-src",
    "crates/libssh-sys",
    "crates/boringssl-src",
    "crates/boringssl-sys",
    "crates/boring",
]


[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = [
    "Maximilian Ammann <max@maxammann.org>",
    "Lucca Hirschi <lucca.hirschi@inria.fr>",
    "Michael Mera <dev@michaelmera.com>",
    "Tom Gouville <tom@tomgouville.fr>",
]
repository = "https://github.com/tlspuffin/tlspuffin"
homepage = "https://github.com/tlspuffin/tlspuffin"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["security", "fuzzing", "testing"]
categories = ["development-tools::testing", "network-programming", "simulation"]
description = "A Dolev-Yao-model-guided fuzzer for TLS"

[workspace.dependencies]
log = "0.4"
log4rs = { version = "1.2.0", features = ["gzip"] }
test-log = "0.2"
env_logger = "0.10"
tempfile = "3.3.0"
chrono = "0.4.19"
criterion = "0.5"
itertools = "0.13"
hex = "0.4.3"
cfg-if = "1.0.0"
once_cell = "1.12.0"
dyn-clone = "1.0.17"
smallvec = "1.8.1"
bindgen = "0.69.1"
nix = "0.29.0"
signal-hook = "0.3.17"
serde = "1.0.137"
serde_json = "1.0.81"
toml = "0.8.19"
cc = "1.0"
cmake = "0.1.48"
libc = "0.2.126"
foreign-types = "0.5.0"
rand = "0.8"
clap = "4.2.4"
anyhow = "1.0"
derivative = "2.2.0"
regex = "1.10"
derive_more = "1.0"
syn = "2.0.66"
quote = "1.0.36"
proc-macro2 = "1.0.79"
trybuild = "< 1.0.91"
comparable = "0.5.4"

[patch.crates-io]
wolfssl-sys = { path = "crates/wolfssl-sys" }
wolfssl-src = { path = "crates/wolfssl-src" }
openssl-src = { path = "crates/openssl-src-111" }
libressl-src = { path = "crates/libressl-src" }
libssh-sys = { path = "crates/libssh-sys" }
security-claims = { path = "tlspuffin-claims" }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
debug = true

[profile.dev]
panic = "abort"
# Without LTO, the fuzzer hangs in debug releases with BoringSSL
# and ASAN. If you want to do a debug build with BoringSSL and ASAN
# you need to activate LTO.
# lto = true
