[package]
name = "tlspuffin-cbindings"
version = "0.1.0"
authors = ["Michael Mera <dev@michaelmera.com>"]
edition = "2021"
links="tlspuffin-cbindings"

[features]
default = []

[dependencies]
libc = { version = "0.2.126" }
puffin = { path = "../puffin" }
log = "0.4.17"

[build-dependencies]
cc = "1.0"
bindgen = "0.65"

[lib]
name = "tlspuffin_cbindings"
path = "src/lib.rs"