[package]
name = "opcuapuffin"
description = "OPC UA protocol implementation for fuzzing with puffin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
rust-put = []

[dependencies]
base64 = "0.21"
bitflags = "2.4"
byteorder = "1.4"
chrono = { version = "0.4.38", features = ["serde"] }
lazy_static = "1.5.0"
puffin = { path = "../puffin" }
puffin-macros = { path = "../puffin-macros" }
uuid = { version = "1.2", features = ["v4"] }

log = { workspace = true }
serde = { workspace = true, features = ["derive"] }


[build-dependencies]
# It is essential that this dependency be listed as build-dependencies! Because it is one. Else features get resolved wrong.
puffin-build = { path = "../puffin-build" }
itertools = { workspace = true }
bindgen = { workspace = true }

[[bin]]
name = "opcuapuffin"
path = "src/main.rs"