[package]
name = "puffin"
description = "Generic APIs for protocol fuzzing with tlspuffin"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
# Logs each execution of __sanitizer_cov_trace_pc_guard*
sancov_pcguard_log = []
# Uses libafl for the instrumentation. sancov_pcguard_log and sancov_libafl are mutally exclusive
sancov_libafl = ["libafl_targets/sancov_pcguard_hitcounts"]

introspection = ["libafl/introspection"]

claims = []

[dependencies]

# LibAFL
libafl = "0.10.1"
libafl_targets = "0.10.1"

# Logging
log = { version = "0.4.17" }
#features = ["release_max_level_off", "max_level_warn"]
log4rs = "1.2.0"

# Other Dependencies
libc = { version = "0.2.126" }
clap = { version = "4.2.4", features = ["cargo"] }
rand = "0.8.5"
dyn-clone = "1.0.17"
itertools = "0.10.3"
smallvec = "1.8.1"
serde = { version = "1.0.137", features = ["derive"] }
postcard = { version = "*", features = ["alloc"] }
once_cell = "1.12.0"
chrono = "0.4.19"
cfg-if = "1.0.0"
serde_json = "1.0.81" # Used for StatsMonitor TOOD: Hide behind feature flag
ahash = "0.8.3"
nix = "0.25.0"
paste = "1.0"
anyhow = "1.0"
derivative = "2.2.0"

[dev-dependencies]
test-log = "0.2.10"
env_logger = "0.10.0"

