[package]
name = "puffin"
description = "Generic APIs for protocol fuzzing with tlspuffin"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
# Logs each execution of __sanitizer_cov_trace_pc_guard*
sancov_pcguard_log = []
# Uses libafl for the instrumentation. sancov_pcguard_log and sancov are mutally exclusive
sancov = ["libafl_targets/sancov_pcguard_hitcounts"]

introspection = ["libafl/introspection"]

[dependencies]

# LibAFL
libafl = { version = "0.11", features = ["introspection"] }
libafl_targets = "0.11"
libafl_bolts = "0.11"

# LibAFL/Fuzzer
ahash = "0.8.11"
postcard = { version = "*", features = ["alloc"] }

# Logging
log = { workspace = true }
#features = ["release_max_level_off", "max_level_warn"]
log4rs = { workspace = true }

# Other Dependencies
libc = { workspace = true }
clap = { workspace = true, features = ["cargo"] }
rand = { workspace = true }
dyn-clone = { workspace = true }
serde = { workspace = true, features = ["derive"] }
once_cell = { workspace = true }
chrono = { workspace = true }
cfg-if = { workspace = true }
itertools = { workspace = true }
serde_json = { workspace = true }
nix = { workspace = true, features = ["process", "signal"] }
signal-hook = { workspace = true, features = ["iterator", "extended-siginfo"] }
anyhow = { workspace = true }
derivative = { workspace = true }
paste = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
env_logger = { workspace = true }
