[package]
name = "puts-sys"
version = "0.1.0"
authors = ["Michael Mera <dev@michaelmera.com>"]
edition = "2021"
exclude = ["/vendor"]

[features]
openssl = []

[dependencies]
libc = { version = "0.2.126" }
puffin = { path = "../puffin" }
log = "0.4.17"

[build-dependencies]
cmake = "0.1"
cc = "1.0"
bindgen = "0.65"