[package]
name = "puts-sys"
version.workspace = true
authors.workspace = true
edition.workspace = true
exclude = ["/vendor"]

[features]
openssl = []

[dependencies]
libc = { version = "0.2.126" }
puffin = { path = "../puffin" }
log = "0.4.17"

[build-dependencies]
cmake = "0.1"
cc = "1.0"
bindgen = "0.65"