[package]
name = "sshpuffin"
description = "SSH protocol implementation for fuzzing with tlspuffin"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
# Current put supports claims
claims = ['puffin/claims']

[dependencies]
libssh-sys = { path = "../crates/libssh-sys", features = ["libssh0104"] }
puffin = { path = "../puffin" }

log = "0.4"
serde = { version = "1.0.137", features = ["derive"] }

# libssh
foreign-types = { version = "0.5.0" }

[dev-dependencies]
env_logger = "0.10.0"
test-log = "0.2.11"

[build-dependencies]
cmake = "0.1.48"
bindgen = "0.69.1"
