[package]
name = "sshpuffin"
description = "SSH protocol implementation for fuzzing with tlspuffin"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
# Current put supports claims
claims = []

[dependencies]
libssh-sys = { path = "../crates/libssh-sys", features = ["libssh0104"] }
puffin = { path = "../puffin" }
puffin-build = { path = "../puffin-build" }
extractable-macro = { path = "../extractable-macro" }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }

# libssh
foreign-types = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
test-log = { workspace = true }

[build-dependencies]
cmake = { workspace = true }
bindgen = { workspace = true }
