[package]
name = "security-claims"
description = "Optional instrumentation for PUTs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
build = "build.rs"

[dependencies]
hex = "0.4.3"
itertools = "0.10.3"

[build-dependencies]
bindgen = "0.69.1"
