[package]
name = "security-claims"
description = "Optional instrumentation for PUTs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
build = "build.rs"

[dependencies]
hex = { workspace = true }

[build-dependencies]
bindgen = { workspace = true }
