[package]
name = "tlspuffin-macros"
description = "Utility macros for tlspuffin"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
syn = { version = "2.0.66", features = ["full"] }
proc-macro2 = "1.0.79"

[dev-dependencies]
trybuild = { version = "< 1.0.91", features = ["diff"] }
